fix(css): fixed elements sticking out of page

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -576,7 +576,7 @@ section {
 /*region Slideshow */
 
 .slideshow-container {
-  width: 100vw;
+  width: 100%;
   position: relative;
   margin: auto;
 }
@@ -584,7 +584,7 @@ section {
 .slide {
   position: absolute;
   margin: $nav-height 0 0 0;
-  width: 100vw;
+  width: 100%;
   opacity: 1;
   transition: opacity 1s;
 }
@@ -717,7 +717,7 @@ footer {
 .footer-background {
   background-image: url("./plains.jpg");
   margin: 0;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   position: absolute;
   background-position-y: 60%;
